agregacion de funcion de semaforo

--- a/Calles_SantaMonica/Components/App.razor
+++ b/Calles_SantaMonica/Components/App.razor
@@ -17,6 +17,7 @@
     <Routes />
     <script src="_framework/blazor.web.js"></script>
     <script src="bootstrap-5.3.5-dist/js/bootstrap.min.js"></script>
+    <script src="semaforo.js"></script>
 </body>
 
 </html>
